2008-09-10  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridViewCheckBoxColumn.cs: Use the threestate constructor for
	the cell template.
	* DataGridViewCheckBoxCell.cs: Add proper support for threestate.
	* DataGridViewCell.cs: Implement GetEditedFormattedValue for types
	without EditingControls, paint background selection for types without
	EditingControls, reset the EditingCellValueChanged flag when the
	cell's value is committed.
	* DataGridView.cs: Make BeginEdit and EndEdit work with cells that don't
	have EditingControls, remove a double call to a cell's OnContentClickInternal,
	don't do cell changing logic in OnMouseDown if the cell didn't change.
	[Fixes bug #420351]

2008-09-10  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* DateTimePicker.cs: Fix the edition of am/pm specifier.

2008-09-09  Jonathan Pobst  <monkey@jpobst.com>

	* TextControl.cs: Add "&" to the list of valid characters in a URL.

2008-09-09  Carlos Alberto Cortez <calberto.cortez@gmail.com> 

	* DateTimePicker.cs: Before incrementing or decrementing any part in
	the textbox, end any current edit. Also when ending the current edit
	use the editing_part_index field instead of the current selected
	value, since they can be out of synch, and we really need to work on
	the *real* current edit part. Finally when PartData.Selected changes,
	always try to end any ongoing edit.
	This should fix some small errors handling mouse navigation and
	increase/decrease operations.

2008-09-09  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* DateTimePicker.cs: 'hh' and 'HH' formats (12 and 24 hour formats
	respectively) should handled different, since the 12 hours format
	needs the value typed by the user to be adjusted depending on the
	a.m/p.m value, so it is preserved, and only changed when the value
	reaches the 12 value (when it changes from a.m to p.m).
	Fixes part of #416555.

2008-09-08  Jonathan Pobst  <monkey@jpobst.com>
